process 운동 루틴 조회 수정, process 결과 데이터 조회
